[tool.poetry]
name = "flipper-catalog-apps-downloader"
version = "0.1.0"
description = ""
authors = ["andrejcyrkunov <andrey.pwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pyngrok = "^6.0.0"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.1"
httpx = "^0.24.0"
ruff = "^0.0.284"
isort = "^5.12.0"
black = "^23.7.0"

[tool.ruff]
exclude = [".git", "__pycache__", ".idea",".venv"]
line-length = 120

[tool.isort]
multi_line_output = "3"
length_sort = true
reverse_sort = "1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
